--- a/HTML CSS-Afternoon/index.html
+++ b/HTML CSS-Afternoon/index.html
@@ -36,7 +36,7 @@
     <img src="images/Photo_Nisarg.jpeg" class="img-responsive img-circle margin" style="display:inline" alt="Nisarg" width="200" height="200">
     <h1>Nisarg Shah</h1>      
   </div>
-</div>
+</div><br/><br/>
   
 <div class="jumbotron">
     <div id="aboutme" class="container text-center">
@@ -44,7 +44,7 @@
         <p>My name is Nisarg Shah.I am from Vadodara, Gujarat.</p>
         <p>Currently a Software Engineer Intern at Accolite.</p>
     </div>
-</div>
+</div><br/><br/>
 
 <div id="education" class="container-fluid bg-3 text-center">
   <h2>Education</h2>    
@@ -64,7 +64,7 @@
       <img src="./images/MSU.jpg" class="img-responsive" style="width:100%; height:436px" alt="Image">
     </div>
   </div>
-</div>
+</div><br/><br/>
 
 <div id="projects" class="container-fluid bg-3 text-center">
     <h2>Projects</h2>    
