--- a/HTML CSS-Afternoon/index.html
+++ b/HTML CSS-Afternoon/index.html
@@ -12,68 +12,54 @@
 </head>
 <body>
     
-<div class="jumbotron">
-  <div id="portfolio" class="container text-center">
-    <img src="images/Photo_Nisarg.jpeg" class="img-responsive img-circle margin" style="display:inline" alt="Nisarg" width="200" height="200">
-    <h1>Nisarg Shah</h1>      
+  <div id="portfolio" class="container text-center" style="background-color: #f38181; width:100% ">
+    <p><br><br></p>
+    <img src="images/Photo_Nisarg.jpeg" class="img-responsive img-circle" style="display:inline" alt="Nisarg" width=20%>
+    <h1><b> NISARG SHAH </b></h1> 
+    <p><br><br><br></p>     
   </div>
-</div><br/><br/>
 
-<div class="jumbotron">
-    <div id="aboutme" class="container text-center">
-        <h2>About Me</h2>
-        <p>My name is Nisarg Shah.I am from Vadodara, Gujarat.</p>
-        <p>Currently a Software Engineer Intern at Accolite.</p>
-    </div>
-</div><br/><br/>
+  <div id="aboutme" class="container text-center" style="background-color: #625772; width: 100%; color:#fefaec">
+    <p><br><br></p>
+        <h2><b>About Me: </b></h2>
+        <div style="font-size: 20px;">
+        <p><br></p>
+        <p>I was born in Vadodara, which is located on the banks of the Vishwamitri river. Seeing that I have been <br>living here for the past 20 years, I can say with pride that I love my city. <br>I am about to enter a new chapter of my life at Accolite. I will be working as a software engineer intern. <br>I must say I am very excited for this opportunity.</p><br>
+        <p><br></p>
+      </div>
+  </div>
 
-<div id="education" class="container-fluid bg-3 text-center">
-  <h2>Education</h2>    
-  <div class="row">
+<div id="education" class="container-fluid bg-3 text-center" style="background-color: #f38181;">
+  <p><br><br></p>
+  <h2><b>Education: </b></h2>   
+  <p><b>________________________________________________________________________________________________________________</b></p> 
+  <p><br></p>
+  <div class="row" style="font-weight:580; font-size: 18px; margin-left: auto; margin-right: auto;">
     <div class="col-sm-6">
-      <p>International Institute of Information Technology Bangalore, Karnataka</p>
-      <p>Master of Technology in Computer Science and Engineering</p>
-      <p>GPA: 3.55/4.00</p>
-      <p>July. 2019 – June. 2021</p>
-      <img src="./images/IIITB.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p><i>Institution:</i> IIIT Bangalore</p>
+      <p><i>Field:</i> MTech in CSE</p>
+      <p><i>Score:</i> 3.55/4</p>
+      <p><i>Duration:</i> July 2019 to June 2021</p>
+      <p><br></p>
+      <img src="./images/IIITB.jpg" style="width:80%; height: 340px;" alt="Image">
     </div>
-    <div class="col-sm-6"> 
-      <p>The Maharaja Sayajirao University of Baroda Vadodara, Gujarat</p>
-      <p>Bachelor of Engineering in Computer Science</p>
-      <p>CGPA: 8.94/10.0 </p>
-      <p>July. 2015 - May. 2019 </p>
-      <img src="./images/MSU.jpg" class="img-responsive" style="width:100%; height:436px" alt="Image">
+    <div class="col-sm-6" > 
+      <p><i>Institution:</i> MSU, Vadodara</p>
+      <p><i>Field:</i> BE in CSE</p>
+      <p><i>Score:</i> 8.94/10 </p>
+      <p><i>Duration:</i> July 2015 to May 2019 </p>
+      <p><br></p>
+      <img src="./images/MSU.jpg" style="width:80%; height: 340px;" alt="Image">
     </div>
   </div>
-</div><br/><br/>
+  <p><br><br><br></p>
+</div>
 
-<div id="projects" class="container-fluid bg-3 text-center">
-    <h2>Projects</h2>    
-    <div class="row">
-      <div class="col-sm-3">
-        <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <h1>CodeIIITB</h1>
-              </div>
-              <div class="flip-card-back">
-                <p>Built an online coding platform where one can solve problems and discuss the solution. Embedded Ace Editor for better coding experience. We used DevOps tools like Jenkins, Docker and Rundeck to ease the Continuous Integration and Continuous Deployment of the project.</p>
-              </div>
-            </div>
-        </div> 
-      </div>
-      <div class="col-sm-3">
-        <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <h1> CommonSense Validation and Explanation</h1>
-              </div>
-              <div class="flip-card-back">
-                <p>We build a model to identify sentence which makes sense. We used BERT model to generate the embeddings of the sentence and CLS output is passed to the neural network which help to classify the sentences. The accuracy of our model is 74%. </p>
-            </div>
-            </div>
-        </div> 
-      </div>
+<div id="projects" class="container-fluid bg-3 text-center" style="background-color: #625772; ">
+  <p><br><br></p>  
+  <h2><b>Projects:</b></h2>  
+  <p><br><br></p>  
+    <div class="row" style="margin-left: auto; margin-right: auto; width: 100%;">
       <div class="col-sm-3">
         <div class="flip-card">
             <div class="flip-card-inner">
@@ -81,8 +67,20 @@
                 <h1> New York Taxi Fare Prediction</h1>
               </div>
               <div class="flip-card-back">
-                <p> We build a model to predict taxi fare. Here we did data cleaning and then we did feature extraction on the dataset particularly on timestamp, pickup and drop point. Then ﬁnally applied LGBM framework on the training dataset. We got RMSE value 4.91. </p>
+                <p> We built a model using LGBM framework to predict taxi fare.   </p>
               </div>
+            </div>
+        </div> 
+      </div>
+      <div class="col-sm-3">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <h1> CommonSense Validation </h1>
+              </div>
+              <div class="flip-card-back">
+                <p>We used BERT for identifying a sentence which makes sense. </p>
+            </div>
             </div>
         </div> 
       </div>
@@ -93,15 +91,20 @@
                 <h1> Bull’s Eye (Archery Game)</h1>
               </div>
               <div class="flip-card-back">
-                <p>A Single player game in which ﬁrst a player will be given Some Coins to bet if he wins the bet the diﬃculty level of Archery would be easy in comparison of if he loses the bet. More the obstacles more will be the diﬃculty. Built using C Graphics Library.</p>
+                <p>We made an archery game built only using the C Graphics Library.</p>
               </div>
             </div>
         </div> 
       </div>
-  </div><br/><br/>
+  </div>
+  <p><br><br><br></p>
 
-  <footer class="container-fluid text-center">
-    <p>Created By Nisarg Shah. Nisarg.Shah@accolitedigital.com</p>
+  <footer class="container-fluid text-center" style="font-size: 15px;">
+    <p><br><br></p>
+    <div style="font-size: 18px;">
+      <p><b>Created By:</b><br></p>
+    </div>
+    <p> Nisarg Shah (<u>nisarg.shah@accolitedigital.com</u>)</p>
   </footer>
 
 </body>
